--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<link rel="stylesheet" href="/content/css/bootstrap.css">
 		<link rel="stylesheet" href="/content/css/angular-material.css">
 		<link rel="stylesheet" href="/content/css/site.css">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	</head>
 	<body>
 
