--- a/index.html
+++ b/index.html
@@ -97,6 +97,13 @@
 			</div>
 		</div>
 
+		<div class="container">
+			<h1>Gulp</h1>
+			<hr>
+			<p>Interested in building your own animated svg library? Check out <a href="https://github.com/bkdiehl/gulp-animation-states">gulp-animation-states</a> to see how you can quickly and easily combine svg and js into a single js file, allowing you to call your SVGs like any font icon.</p>
+		</div>
+
+
 		<div class="demos" ng-app="app" ng-controller="AppCtrl">
 			<div class="container">
 				<h1>Demos</h1>
