include link to demo

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 		<link rel="stylesheet" href="/content/css/angular-material.css">
 		<link rel="stylesheet" href="/content/css/site.css">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<title>SnapAnimationStates</title>
+		<meta property="og:title" content="SnapAnimationStates">
+		<meta property="og:description" content="A Snap.svg plugin that lets you load and animate svgs using a simple schema">
 	</head>
 	<body>
 
@@ -15,7 +18,12 @@
 			<a href="https://github.com/bkdiehl/snap-animation-states" class="btn btn-main btn-outline-inverse btn-lg">Code on Github</a>
 		</div>
 
-		<div class="container gutter-bottom-lg">
+		<p data-height="288" data-theme-id="0" data-slug-hash="bWwQJZ" data-default-tab="js,result" data-user="bkdiehl" data-embed-version="2" data-pen-title="bWwQJZ" class="codepen">See the Pen <a href="https://codepen.io/bkdiehl/pen/bWwQJZ/">bWwQJZ</a> by Briant Diehl (<a href="http://codepen.io/bkdiehl">@bkdiehl</a>) on <a href="http://codepen.io">CodePen</a>.</p>
+		<script async src="https://production-assets.codepen.io/assets/embed/ei.js"></script>
+
+
+		<div class="container gutter-lg">
+			<h4><a href="https://bkdiehl.github.io/"><strong>Check out a demo & documentation</strong></a></h4>
 			<div class="installation">
 				<h1>Installation</h1>
 				<hr>
