simpler schemas when resetting values

--- a/index.html
+++ b/index.html
@@ -153,8 +153,8 @@
 						<ul class="checkbox-group">
 							<li ng-repeat="box in checkbox">
 								<i class="{{box.class}}"></i>
-								<input type="checkbox" name="{{box.id}}" id="{{box.id}}" />
-								<label for="{{box.id}}" class="checkbox-selector" >Checkbox {{$index + 1}}</label>
+								<input type="checkbox" name="{{box.id}}" id="{{box.id}}" class="checkbox-selector" />
+								<label for="{{box.id}}" >Checkbox {{$index + 1}}</label>
 							</li>
 						</ul>
 					</div>
